:bug: Fix mousemove event over iframe not firing for quick mouse movements by appending as top child an overlay with z-index in canvas div (on top of iframe) which allows iframe to be found by elementsFromPoint and mousemove to be fin as overlay div is part of the current document (not the iframe's document)

--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -43,3 +43,9 @@ div.elem.clone > span.elem-title {
     font-size: 0.9rem;
     margin-top: .5rem;
 }
+div.canvas > div.overlay {
+    position: fixed;
+    z-index: +999;
+    width: 100%;
+    height: 100%;
+}
